NetworkStateNotifier: also remove NetworkStateObserver in finalizer too

I was wrong that contextDestroy is not always called before the
document gets destructed.

Make sure we remove NetworkStateNotifier in finalizer too to avoid crash.

BUG=695783
TEST=See the bug for repro

Review-Url: https://codereview.chromium.org/2714643008
Cr-Commit-Position: refs/heads/master@{#452870}

Former-commit-id: ef33cbc2c4e56e2aa5c1503b7cbaf0b826c3affe